objects/gvp__Objective_Creator_Template__c.object
<CustomObject>
    <description>Object used for the Objective Plan VF page.  This object acts as the template for creating multiple objectives against various accounts.</description>
    <fields>
        <fullName>gvp__Accomplish_By_Date__c</fullName>
        <label>Accomplish By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unused</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Objective Plans</relationshipLabel>
        <relationshipName>Objective_Creator_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Assigned_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Import_Type__c</fullName>
        <label>Import Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Key</fullName>
                    <default>true</default>
                    <label>Account Key</label>
                </value>
                <value>
                    <fullName>BDN ID</fullName>
                </value>
                <value>
                    <fullName>Salesforce ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Master_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Objective</label>
        <referenceTo>gvp__Account_Objective__c</referenceTo>
        <relationshipLabel>Objective Plans (Master Objective)</relationshipLabel>
        <relationshipName>Objective_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Load Objective</label>
        <referenceTo>gvp__Account_Objective__c</referenceTo>
        <relationshipLabel>Objective Plans</relationshipLabel>
        <relationshipName>Objective_Creator_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>gvp__Territory__c</referenceTo>
        <relationshipLabel>Objective Plans</relationshipLabel>
        <relationshipName>Objective_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Objective Plan</label>
    <listViews>
        <fullName>gvp__All_Plans</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Objective Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objective Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>